# Software-Design-Studio

amazing-adventures/: .gitignore  README.md  pom.xml
amazing-adventures/src/main/java/student/: Main.java
amazing-adventures/src/main/java/student/adventure/: Adventure.java  Layout.java
amazing-adventures/src/test/java/student/adventure/: AdventureTest.java
amazing-adventures/src/test/resources/: invalidLayout.json  invalidSchema.json  siebel.json
cpptictactoe/: CMakeLists.txt  README.md
cpptictactoe/apps/: CMakeLists.txt  play.cc
cpptictactoe/docs/: CMakeLists.txt  README.md
cpptictactoe/include/tictactoe/: tictactoe.h
cpptictactoe/src/: CMakeLists.txt  tictactoe.cc
cpptictactoe/tests/: CMakeLists.txt  test-tictactoe.cc
crazy-eights/: README.md  pom.xml
crazy-eights/src/main/java/: Main.java
crazy-eights/src/main/java/student/crazyeights/: Card.java  ComplexPlayer.java  GameEngine.java  PlayerStrategy.java  PlayerTurn.java  SimplePlayer.java
crazy-eights/src/test/java/student/crazyeights/: CardTest.java  GameEngineTest.java
devious-debugging/: README.md
devious-debugging/src/: BankAccount.java  FinalOutput.java  FinalOutputByteHolder.java  FinalOutputClassLoader.java  FinalOutputPrinter.java  HackerMain.java  SecurityQuestions.java  TutorialFinished.txt  YourNetID.txt
final-project/: CMakeLists.txt  DEVELOPMENT.md  README.md
final-project/apps/: my_app.cc  my_app.h  run.cc
final-project/include/mylibrary/: particle.h  particleSystem.h
final-project/src/: CMakeLists.txt  particle.cpp  particleSystem.cpp
final-project/tests/: test.cc
linked-list/: CMakeLists.txt  README.md
linked-list/apps/: CMakeLists.txt  main.cc
linked-list/docs/: CMakeLists.txt  README.md
linked-list/include/cs126linkedlist/: ll.h  ll.hpp
linked-list/src/: CMakeLists.txt
linked-list/tests/: CMakeLists.txt  test_ll.cc
mineopoly/: .gitignore
mineopoly/src/mineopoly_two/: MineopolyMain.java
mineopoly/src/mineopoly_two/action/: Action.java  MoveAction.java  TileInteractAction.java  TurnAction.java
mineopoly/src/mineopoly_two/competition/: ExampleCompetitionStrategy.java  ExampleOtherClass.java
mineopoly/src/mineopoly_two/game/: Economy.java  GameBoard.java  GameEngine.java  MinePlayer.java  WorldGenerator.java
mineopoly/src/mineopoly_two/graphics/: EconomyDisplayPanel.java  GameBoardDisplayPanel.java  GameInfoDisplayPanel.java  ImageFileFilter.java  ImageManager.java  PlayerInfoDisplayPanel.java  TileRenderLayer.java  UserInterface.java
mineopoly/src/mineopoly_two/item/: InventoryItem.java  ResourceType.java
mineopoly/src/mineopoly_two/replay/: Replay.java  ReplayIO.java  ReplayStrategy.java
mineopoly/src/mineopoly_two/strategy/: MinePlayerStrategy.java  MyStrategy.java  PlayerBoardView.java  RandomStrategy.java
mineopoly/src/mineopoly_two/tiles/: CrackedTile.java  EmptyTile.java  MarketTile.java  RechargeTile.java  ResourceTile.java  StoneTile.java  Tile.java  TileType.java
mineopoly/src/mineopoly_two/util/: DistanceUtil.java
mineopoly/src/test/java/student/MyStrategy/: MyStrategyTest.java
naive-bayes/: .gitignore  CMakeLists.txt  README.md
naive-bayes/apps/: CMakeLists.txt  classify.cc
naive-bayes/docs/: CMakeLists.txt  README.md
naive-bayes/include/bayes/: classifier.h  image.h  model.h
naive-bayes/src/: CMakeLists.txt  classifier.cc  image.cc  model.cc
naive-bayes/tests/: CMakeLists.txt  test_classifier.cc
naive-bayes/tests/data/: sampleimages  samplelabels
project-proposal/: README.md
snake/: CMakeLists.txt  README.md
snake/apps/: CMakeLists.txt  run.cc  snake_app.cc  snake_app.h
snake/assets/: snake.db
snake/docs/: CMakeLists.txt  README.md
snake/include/snake/: direction.h  engine.h  food.h  leaderboard.h  location.h  player.h  segment.h  snake.h
snake/src/: CMakeLists.txt  engine.cc  food.cc  leaderboard.cc  location.cc  segment.cc  snake.cc
snake/tests/: CMakeLists.txt  test_snake.cc
sudoku/: CMakeLists.txt  README.md
sudoku/apps/: CMakeLists.txt  solve.cc
sudoku/docs/: CMakeLists.txt
sudoku/include/sudoku/: solver.h  sudoku.h
sudoku/src/: CMakeLists.txt  solver.cc  sudoku.cpp
sudoku/tests/: CMakeLists.txt  test-sudoku.cc
sudoku/tests/data/: empty.spf  invalid.spf  invalid2.spf  simple.spf
tictactoe-testing/: README.md  pom.xml
tictactoe-testing/src/main/java/student/tictactoe/: Evaluation.java  TicTacToe.java
tictactoe-testing/src/test/java/student/tictactoe/: TicTacToeTest.java
